org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/GenericBounds/GenericBounds_prop_type_parameter_substitutability/.project
<?xml version="1.0" encoding="UTF-8"?>
<projectDescription>
	<name>GenericBounds_prop_type_parameter_substitutability</name>
	<comment></comment>
	<projects>
	</projects>
	<buildSpec>
	</buildSpec>
	<natures>
		<nature>org.kermeta.language.texteditor.eclipse.nature.KermetaNatureID</nature>
	</natures>
</projectDescription>
